Removing objects from sub-collection doesn't update instances of parent collection #64430

Closed
opened 2019-05-10 12:50:42 +02:00 by Michael Soluyanov · 4 comments

System Information
Operating system: Linux-4.15.0-47-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-09 17:55, hash: 427c75e4c2

Short description of error
Removing objects from sub-collection doesn't update instances of parent collection

Exact steps for others to reproduce the error

  1. Open file Снимок экрана от 2019-05-10 13-46-08.png (nice shading bug from https://developer.blender.org/T64405)
    collection test.blend

  2. Move object "remove this from collection" to the first collection. Снимок экрана от 2019-05-10 13-43-13.png Снимок экрана от 2019-05-10 13-43-20.png

  3. Object "remove this from collection" will removed from "Test collection" instances but not from "Parent collection" instances: Снимок экрана от 2019-05-10 13-46-15.png

  4. Save then Revert, then it is correct: Снимок экрана от 2019-05-10 13-50-18.png

**System Information** Operating system: Linux-4.15.0-47-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-09 17:55, hash: `427c75e4c2` **Short description of error** Removing objects from sub-collection doesn't update instances of parent collection **Exact steps for others to reproduce the error** 1. Open file ![Снимок экрана от 2019-05-10 13-46-08.png](https://archive.blender.org/developer/F7024570/Снимок_экрана_от_2019-05-10_13-46-08.png) (nice shading bug from https://developer.blender.org/T64405) [collection test.blend](https://archive.blender.org/developer/F7024562/collection_test.blend) 2. Move object "remove this from collection" to the first collection. ![Снимок экрана от 2019-05-10 13-43-13.png](https://archive.blender.org/developer/F7024559/Снимок_экрана_от_2019-05-10_13-43-13.png) ![Снимок экрана от 2019-05-10 13-43-20.png](https://archive.blender.org/developer/F7024566/Снимок_экрана_от_2019-05-10_13-43-20.png) 3. Object "remove this from collection" will removed from "Test collection" instances but not from "Parent collection" instances: ![Снимок экрана от 2019-05-10 13-46-15.png](https://archive.blender.org/developer/F7024572/Снимок_экрана_от_2019-05-10_13-46-15.png) 4. Save then Revert, then it is correct: ![Снимок экрана от 2019-05-10 13-50-18.png](https://archive.blender.org/developer/F7024586/Снимок_экрана_от_2019-05-10_13-50-18.png)
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Bastien Montagne was assigned by Sebastian Parborg 2019-06-11 15:19:14 +02:00

Note that there is same issue when adding new object into 'grand-child' collection as well.

Note that there is same issue when adding new object into 'grand-child' collection as well.

This issue was referenced by 09c32a15d2

This issue was referenced by 09c32a15d2f9171c2b61220c6ba5cc585f541cb2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64430
No description provided.